# python-ml-research-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE.ml-template  README.md  a.py  b.py  fill_template.sh  pyproject.toml
_data/: README.md
code/: pyproject.toml
code/src/my_project/: main.py
code/src/my_project/configs/: config.yml
code/src/package_name/configs/: config.yml
data/: README.md
installation/: edit-platform-and-acceleration.sh
installation/amd64/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compse.yml  entrypoint.sh
installation/common/: install_dependencies.sh
installation/conda/: create_env.sh  image_dependencies.txt  install_dependencies.sh  system_dependencies.txt
installation/conda-osx-arm64-mps/: README.md  environment.yml  update-env-file.sh
installation/docker-amd64/: .dockerignore  .project.env  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  entrypoint.sh  template.sh
installation/docker-amd64-cuda/: .dockerignore  Dockerfile  Dockerfile-user  README.md  apt.txt  compose-base.yaml  compose.yaml  cresset.LICENSE  requirements.txt  template.sh  update-env-file.sh
installation/docker-arm64-cuda/: .dockerignore  Dockerfile  LICENSE.cresset  README.md  apt.txt  compose.yaml  requirements.txt  template.sh  update-env-file.sh
installation/osx-arm64/: README.md  environment.yml  update_env.sh  update_env_file.sh
outputs/: README.md
reproducibility-scripts/: README.md  some-experiment.sh  some-sweep.yaml  some_sweep.yaml  template-experiment.sh  template-sweep.yaml
reproducibility_scripts/: README.md  main  some_experiment.sh
src/package_name/: __init__.py  main.py  numpy_benchmark.py  pytorch_benchmark.py
src/template_package_name/: chat_no_template.py  chat_pipeline_llama.py  foo.py  llama_dpo.py  main.py  ppo.py  sft.py  some_experiment.py  template_experiment.py  throughput_decode.py  train.py
template/: README.md  change-project-name.sh  fill_template.sh  template-variables.env  template_variables.env  template_variables.sh
(+156 files in other folders)
