[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "<project-name>"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=<python-version>"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.isort]
known_third_party = ["wandb"]
