[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template-project-name"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/template_package_name"]

[tool.isort]
known_third_party = ["wandb"]
